[package]
name = "risk_manager"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "risk_manager"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
serde= { version = "1.0", features = ["derive"] }
serde_json= "1.0"
