[project]
name = "finalto-mock-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "cryptography>=46.0.6",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "maturin>=1.13.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
